--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.356.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
+    "preline": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
