--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.12",
     "lucide-react": "^0.356.0",
-    "next": "14.1.3",
+    "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "preline": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
+    "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
